project(isis_nexus_streamer)

find_package(Protobuf REQUIRED)

set( SRC_FILES
        src/EventData.cpp)

set( INC_FILES
        include/EventData.h)

set( TEST_FILES
        test/EventDataTest.cpp)

#####################
## Libraries       ##
#####################

include_directories(
        ${PROTOBUF_INCLUDE_DIRS}
        ${PROJECT_SOURCE_DIR}/include)

add_library(eventdata_lib ${PROJECT_SOURCE_DIR}/src/eventDataProtoBuffer.pb.cc)

#####################
## Unit Tests      ##
#####################

set(eventData_tests_LINK_LIBRARIES
        ${PROTOBUF_LIBRARIES}
        gtest
        gmock
        eventdata_lib)
if(UNIX)
    list(APPEND tests_LINK_LIBRARIES pthread)
endif()

add_library(eventDataUnitTests
        ${TEST_FILES})
target_link_libraries(eventDataUnitTests ${eventData_tests_LINK_LIBRARIES})

#####################
## Test Coverage   ##
#####################

# Add all src and inc files to test coverage check
if (COVERALLS)
    foreach( loop_var ${SRC_FILES} ${INC_FILES})
        set_property(GLOBAL APPEND PROPERTY COVERAGE_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/${loop_var}")
    endforeach(loop_var)
endif()
